--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,21 @@
 html {
     font-size: 16px;
 }
+
+body {
+    height: 100vh;
+    width: 100vw;
+
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 80%;
+}
+
+header {
+    background-color: red;
+}
+
+main {
+    background-color: green;
+}
+
