--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'rubikblack';
+    src: url('./font/rubik-black-webfont.woff2') format('woff2'),
+         url('./font/rubik-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'rubikregular';
+    src: url('./font/rubik-regular-webfont.woff2') format('woff2'),
+         url('./font/rubik-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 :root {
     /* github color palette */
     --header-bg-color: rgba(1,4,9,255);
@@ -8,6 +25,8 @@
     --border-setup: 1px solid rgba(61,68,77,255);
     --border-radius: 6px;
     --green-button: rgba(35,134,54,255);
+    --rubik-black-setup: 'rubikblack', Arial, Helvetica, sans-serif;
+    --rubik-regular-setup: 'rubikregular', Arial, Helvetica, sans-serif
 }
 
 * {
@@ -18,6 +37,7 @@
 
 html {
     font-size: 16px;
+    font-family: var(--rubik-regular-setup);
     color: var(--font-color);
 }
 
@@ -66,6 +86,7 @@ main {
                 background-color: var(--main-bg-color);
                 border: var(--border-setup);
                 padding: 1rem 2rem;
+                border-radius: 6px;
 
                 display: grid;
                 align-items: center;
@@ -73,10 +94,12 @@ main {
 
                 h3 {
                     font-size: 2rem;
+                    font-family: var(--rubik-black-setup);
                 }
 
                 p {
                     font-size: 1rem;
+                    font-family: var(--rubik-regular-setup);
                 }
             }
         }
@@ -94,6 +117,7 @@ main {
                 border: var(--border-setup);
                 color: var(--font-color);
                 border-radius: var(--border-radius);
+                font-family: var(--rubik-black-setup);
             }
         }
 
