--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ main {
         height: 95%;
         padding: 1rem;
         background-color: var(--main-bg-color);
+        border: 1px solid yellow;
 
         display: grid;
         gap: 1rem;
@@ -106,16 +107,22 @@ main {
             background-color: var(--main-bg-color);
         }
 
-        #book-list-container {
+        .book-list-container {
             background-color: var(--main-bg-color-color);
+            border: 1px solid red;
+            border-radius: 6px;
+            height: 20%;
+
+            display: grid;
+            grid-auto-flow: column;
 
             .book-container {
                 width: 100%;
-                height: 20%;
+                height: 100%;
                 background-color: var(--main-bg-color);
-                border: var(--border-setup);
                 padding: 1rem 2rem;
                 border-radius: 6px;
+                border: 1px solid orange;
 
                 display: grid;
                 align-items: center;
@@ -130,6 +137,15 @@ main {
                     font-size: 1rem;
                     font-family: var(--rubik-regular-setup);
                 }
+            }
+
+            .read-toggle-container {
+                border: 1px solid yellow;
+                width: 100%;
+                padding: 1rem 2rem;
+
+                display: grid;
+                place-content: center;
             }
         }
 
