--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,6 @@ main {
         height: 95%;
         padding: 1rem;
         background-color: var(--main-bg-color);
-        border: 1px solid yellow;
-
         display: grid;
         gap: 1rem;
         grid-template-rows: 5fr 1fr;
@@ -109,12 +107,13 @@ main {
 
         .book-list-container {
             background-color: var(--main-bg-color-color);
-            border: 1px solid red;
             border-radius: 6px;
+            border: var(--border-setup);
             height: 20%;
 
             display: grid;
             grid-auto-flow: column;
+            grid-template-columns: 2fr 1fr;
 
             .book-container {
                 width: 100%;
@@ -122,7 +121,6 @@ main {
                 background-color: var(--main-bg-color);
                 padding: 1rem 2rem;
                 border-radius: 6px;
-                border: 1px solid orange;
 
                 display: grid;
                 align-items: center;
@@ -140,12 +138,54 @@ main {
             }
 
             .read-toggle-container {
-                border: 1px solid yellow;
+                height: 100%;
                 width: 100%;
                 padding: 1rem 2rem;
 
                 display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr;
                 place-content: center;
+
+                #toggle {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    #read-toggle {
+                        display: none;  
+                    }
+
+                    #toggle-label {
+                        display: block;
+                        position: relative;
+                        cursor: pointer;
+                        top: 0px;
+                        left: 0px;
+                        height: 70%;
+                        width: 40%;
+                        background-color: var(--border-setup);
+                        border-radius: 30px;
+                        border: var(--border-setup);
+                    }
+
+                    #toggle-label:before {
+                        content: '';
+                        position: absolute;
+                        top: 6px;
+                        left: 5px;
+                        height: 80%;
+                        width: 40%;
+                        border-radius: 50%;
+                        background-color: white;
+                    }
+
+                    
+                }
+
+
             }
         }
 
