--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 15% 85%;
     grid-template-areas: 
         "header"
         "main";
@@ -66,7 +66,6 @@ header {
         grid-template-columns: 1fr;
         justify-items: center;
           
-
         h1 {
             font-family: var(--rubik-black-setup);
             font-size: 3rem;
@@ -88,18 +87,20 @@ main {
     width: 100%;
     height: 100%;
 
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    section {
+
+    #book-section {
         width: 60%;
-        height: 95%;
+        height: 85%;
         padding: 1rem;
         background-color: var(--main-bg-color);
-        display: grid;
-        gap: 1rem;
-        grid-template-rows: 5fr 1fr;
-
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
+      
         div {
             /* all divs inside this section should have this background-color  */
             background-color: var(--main-bg-color);
@@ -109,7 +110,8 @@ main {
             background-color: var(--main-bg-color-color);
             border-radius: 6px;
             border: var(--border-setup);
-            height: 20%;
+            height: auto;
+            width: 100%;
 
             display: grid;
             grid-auto-flow: column;
@@ -139,7 +141,7 @@ main {
 
             .read-toggle-container {
                 height: 100%;
-                width: 100%;
+                width: 90%;
                 padding: 1rem 2rem;
 
                 display: grid;
@@ -174,8 +176,8 @@ main {
                     #toggle-label:before {
                         content: '';
                         position: absolute;
-                        top: 6px;
-                        left: 5px;
+                        top: 5px;
+                        left: 6px;
                         height: 80%;
                         width: 40%;
                         border-radius: 50%;
@@ -188,22 +190,34 @@ main {
                     } 
 
                     #read-toggle:checked + #toggle-label::before {
-                        transform: translateX(60px);
+                        transform: translateX(50px);
                     }
                 }
 
 
             }
         }
+    }
 
+    #button-section {
+        width: 60% ;
+        height: 15%;
+        /* border: 1px solid orange; */
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
         #button-container {
             display: grid;
             place-items: center;
             border: none;
+            height: 90%;
+            width: 90%;
 
             button {
-                width: 50%;
-                height: 100%;
+                width: 40%;
+                height: 90%;
                 font-size: 2rem;
                 background-color: var(--green-button);
                 border: var(--border-setup);
